get games by category
