# routes/game.route.js
@@ -4,6 +4,7 @@ const gameController = require('../controllers/game.controller');
 
 router.get('/', gameController.getAllGames);
 router.get('/:id', gameController.getGameById);
+router.get('/category/:categoryId', gameController.getGamesByCategory);
 router.post('/', gameController.createGame);
 router.put('/:id', gameController.updateGame);
 router.delete('/:id', gameController.deleteGame);
